# devlogplus

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
backend/: CLAUDE.md
backend/app/: config.py  database.py  main.py  mcp_server.py
backend/app/models/: CLAUDE.md  __init__.py  base.py  feedback.py  journal.py  project.py  quiz.py  reading.py  settings.py  topic.py  triage.py
backend/app/pipelines/: CLAUDE.md  profile_update.py  project_pipeline.py  quiz_pipeline.py  reading_pipeline.py
backend/app/prompts/: CLAUDE.md  profile_update.py  project_evaluation.py  project_generation.py  quiz_evaluation.py  quiz_generation.py  reading_generation.py  topic_extraction.py
backend/migrations/: CLAUDE.md  env.py
backend/scripts/: CLAUDE.md
backend/tests/: conftest.py  test_architecture.py  test_feedback.py  test_journal.py  test_onboarding.py  test_pipelines.py  test_profile.py  test_project.py  test_quiz.py  test_reading.py  test_settings.py  test_transfer.py  test_triage.py
docs/: PRD.md  openapi.json
docs/adr/: 0001-layered-architecture-with-test-enforcement.md  0002-openrouter-as-llm-gateway.md  0003-postgresql-pgvector-for-embeddings.md  0004-langfuse-for-llm-observability.md  0005-openapi-spec-as-contract-with-prism.md  0006-bdd-gherkin-for-scenario-tests.md  0007-native-dev-no-docker.md  README.md
frontend/: .prettierignore  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  stryker.config.mjs  tailwind.config.js  vite.config.ts  vitest.integration.config.ts
frontend/src/: App.test.tsx  App.tsx  vite-env.d.ts
scripts/: backup.sh  export_openapi.py  openapi_regen_hook.sh  setup_cron.sh
workspace/: CLAUDE.md
(+124 files in other folders)
